@@ -22,8 +22,6 @@ Bug fixes
 * [`2674 <https://cta-redmine.irap.omp.eu/issues/2674>`_] -
   Remove setting of effective area energy boundaries from ``LO_THRES`` and
   ``HI_THRES`` keywords
-* [`2660 <https://cta-redmine.irap.omp.eu/issues/2660>`_] -
-  Change PSF table default extension name to ``PSF_2D_TABLE``
 * [`2654 <https://cta-redmine.irap.omp.eu/issues/2654>`_] -
   Apply CTA 2D energy dispersion kludge only to CTA data
 * [`2495 <https://cta-redmine.irap.omp.eu/issues/2495>`_] -
@@ -43,6 +41,8 @@ Improvements
 
 * [`2670 <https://cta-redmine.irap.omp.eu/issues/2670>`_] -
   Support ``ENERG`` column name for CTA energy dispersion FITS file
+* [`2660 <https://cta-redmine.irap.omp.eu/issues/2660>`_] -
+  Make IRF interface compatible with H.E.S.S. format
 * [`2659 <https://cta-redmine.irap.omp.eu/issues/2659>`_] -
   Add ``use_irf_bkg`` argument to ``GCTAOnOffObservation`` constructor
 * [`2657 <https://cta-redmine.irap.omp.eu/issues/2657>`_] -
