@@ -3,10 +3,10 @@
         * Version 1.6.0 released
         ========================
 
-        Change PSF table default extension name to "PSF_2D_TABLE" (#2660)
         Remove setting of effective area energy boundaries from "LO_THRES" and
           "HI_THRES" keywords (#2674)
         Support "ENERG" column name for CTA energy dispersion FITS file (#2670)
+        Make IRF interface compatible with H.E.S.S. format (#2660)
         Add use_irf_bkg argument to GCTAOnOffObservation constructor (#2659)
         Support effective area with theta cut in GCTAOnOffObservation (#2657)
         Add gammalib::replace_segment() function
